# aeson

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .hgtags  .hlint.yaml  .travis.yml  .weeder.yaml  CONTRIBUTING.md  HLint.hs  LICENSE  Makefile  README.markdown  README.md  aeson.cabal  bench.sh  cabal.bench.haskell-ci  cabal.bench.project  cabal.haskell-ci  cabal.project  canonical.js  changelog  changelog.md  flake.nix  gen-ci.sh  release-notes.markdown  run-hlint.sh  run_tests.py  stack-bench.yaml  stack-ffi-unescape.yaml  stack-lts10.yaml  stack-lts12.yaml  stack-lts6.yaml  stack-lts7.yaml  stack-lts8.yaml  stack-lts9.yaml  stack-nightly.yaml  stack-pure-unescape.yaml  stack.yaml  tuple-instances.hs
.github/workflows/: haskell-ci.yml  z-bench.yml
Data/: Aeson.hs
Data/Aeson/: AccParser.hs  Compat.hs  Encode.hs  Encoding.hs  Functions.hs  Generic.hs  Internal.hs  Parser.hs  Select.hs  Stream.hs  TH.hs  Text.hs  TypeLits.hs  Types.hs
Data/Aeson/Encode/: Builder.hs  ByteString.hs  Double.hs  Functions.hs  Int.hs  Number.hs
Data/Aeson/Encoding/: Builder.hs  Internal.hs
Data/Aeson/Internal/: Functions.hs  Time.hs
Data/Aeson/Parser/: .Internal.hs.swp  Internal.hs  Time.hs  Unescape.hs
Data/Aeson/QQ/: Simple.hs
Data/Aeson/Scanner/: Internal.hs
Data/Aeson/Types/: Class.hs  (+6 more)
attoparsec-aeson/: attoparsec-aeson.cabal
attoparsec-aeson/src/Data/Aeson/Internal/: ByteString.hs  Text.hs  Word8.hs
attoparsec-aeson/src/Data/Aeson/Parser/: Internal.hs
attoparsec-iso8601/: README.md  attoparsec-iso8601.cabal  changelog.md
attoparsec-iso8601/Data/Attoparsec/: Time.hs
attoparsec-iso8601/Data/Attoparsec/Time/: Internal.hs
attoparsec-iso8601/src/Data/Attoparsec/: Time.hs
attoparsec-iso8601/src/Data/Attoparsec/Time/: Internal.hs
benchmarks/: AesonCompareAutoInstances.hs  AesonEncode.hs  AesonFoldable.hs  AesonMap.hs  AesonParse.hs  AesonTuples.hs  AutoCompare.hs  Compare.hs  CompareWithJSON.hs  CountLaureates.hs  Dates.hs  EncodeFile.hs  Escape.hs  Issue673.hs  JsonBench.hs  JsonParse.hs  Makefile  Micro.hs  Options.hs  ParseFile.hs  README.markdown  ReadFile.hs  Suite.hs  Twitter.hs  Typed.hs  aeson-benchmarks.cabal  attoparsec-iso8601  bench-parse.py  cbits  encode.py  json-data.tar.bz2  parse.py  src-ffi  src-pure
benchmarks/Auto/G/: BigProduct.hs  BigRecord.hs  BigSum.hs
benchmarks/Auto/T/: D.hs
benchmarks/Compare/: BufferBuilder.hs  JsonBench.hs  JsonBuilder.hs
benchmarks/Twitter/: Generic.hs  Manual.hs  TH.hs
benchmarks/Typed/: Common.hs  Generic.hs  Manual.hs  TH.hs
benchmarks/bench/: AesonFoldable.hs  AesonMap.hs  AesonTuples.hs  AutoCompare.hs  Bench.hs  Compare.hs  CompareWithHermes.hs  CompareWithJSON.hs  Dates.hs  Issue673.hs  Micro.hs  Options.hs  Suite.hs  Typed.hs  UnescapePureText1.hs  UnescapePureText2.hs  Utils.hs  aeson-benchmark-suite.hs
benchmarks/bench/Auto/G/: D.hs
benchmarks/bench/Auto/T/: BigProduct.hs  BigRecord.hs  BigSum.hs  D.hs
benchmarks/bench/Compare/: JsonBench.hs
benchmarks/bench/Data/Hermes/: Aeson.hs
benchmarks/bench/Twitter/: Hermes.hs
benchmarks/bench/Typed/: Generic.hs  Manual.hs  TH.hs
benchmarks/json-data/: dates-fract.json  dates.json  jp20.json  laureate.json
benchmarks/scripts/: perf.sh  unperf.sh
cbits/: unescape_string.c
criterion-compare-txt/: LICENSE  criterion-compare-txt.cabal
criterion-compare-txt/src/: CriterionCompare.hs  CsvParse.hs  Types.hs
examples/: Demo.hs  Generic.hs  GenericSYB.hs  LICENSE  NullaryConstructor.hs  Possible.hs  PossibleGen.hs  PossibleTH.hs  Simplest.hs  TemplateHaskell.hs  Twitter.hs  aeson-examples.cabal
examples/Twitter/: Generic.hs  Manual.hs  Options.hs  TH.hs
examples/src/: GitHub.hs  Simplest.hs  Twitter.hs
examples/src/Twitter/: Manual.hs
include/: overlapping-compat.h
iso8601-attoparsec/: iso8601-attoparsec.cabal
iso8601-attoparsec/Data/Attoparsec/Time/: Internal.hs
parsers/: test_json-jq.py  test_json.cr  test_json.js  test_json.pl  test_json.py  test_json_re.rb  test_json_xs.pl  test_oj_compat.rb  test_oj_strict.rb  test_rjson.r  test_yajl.rb
parsers/test_Json.NET/: project.json  project.lock.json
parsers/test_Lua_JSON/: test_JSON.lua
parsers/test_PMJSON_1_1_0/: Decoder.swift  JSONError.swift  ObjectiveC.swift  Parser.swift
parsers/test_PMJSON_1_2_0/: Decoder.swift  JSONObject.swift
parsers/test_PMJSON_20161026/: Encoder.swift  JSONObject.swift
parsers/test_Squeak_JSON_tonyg/: test_JSON.st
parsers/test_go/: test_json
parsers/test_haskell-aeson/: .gitignore  package.yaml  testaeson  testaeson.cabal
parsers/test_jansson/: hashtable.c  jansson_config.h
parsers/test_java_com_leastfixedpoint_json_1_0/: TestJSONParsing.java
parsers/test_java_jackson_2_8_4/: README.txt
parsers/test_java_nanojson_1_0/: TestJSONParsing.java
parsers/test_java_simple_json_1_1_1/: README.txt
parsers/test_jsmn/: jsmn.h
parsers/test_jsonChecker2/: FSM.rtf
parsers/test_qt/: build.sh
results/: logs.txt  parsing.html  parsing_pruned.html  style.css
src/Data/: Aeson.hs
tests/: CastFloat.hs  DoubleToScientific.hs  Encoders.hs  ErrorMessages.hs  Functions.hs  Instances.hs  JSONTestSuite.hs  Makefile  Options.hs  PropUtils.hs  Properties.hs  PropertyGeneric.hs  PropertyKeys.hs  PropertyQC.hs  PropertyRTFunctors.hs  PropertyRoundTrip.hs  PropertyTH.hs  RFC8785.hs  SerializationFormatSpec.hs  Tests.hs  Types.hs  UnitTests.hs
tests/DataFamilies/: Encoders.hs  Instances.hs  Properties.hs  Types.hs
tests/Properties/: Deprecated.hs  ZonedTime.hs
tests/Regression/: Issue1059.hs  Issue1138.hs  Issue351.hs  Issue571.hs  Issue687.hs  Issue967.hs
tests/UnitTests/: AccErrors.hs  FromJSONKey.hs  Hashable.hs  KeyMapInsertWith.hs  MonadFix.hs  NoThunks.hs  NullaryConstructors.hs  OmitNothingFieldsNote.hs  OptionalFields.hs  UTCTime.hs
tests/golden/: generic.expected  th.expected
text-iso8601/: changelog.md  text-iso8601.cabal
text-iso8601/bench/: text-iso8601-bench.hs
text-iso8601/src/Data/Time/: FromText.hs  ToText.hs
text-iso8601/tests/: text-iso8601-tests.hs
travis/: cabal_macros.h  install.sh  script.sh
(+777 files in other folders)
