cabal-version: 1.12
name:          attoparsec-aeson
version:       2.2.0.0
synopsis:      Parsing of aeson's Value with attoparsec
description:
  Parsing of aeson's Value with attoparsec, originally from aeson.

license:       BSD3
license-file:  LICENSE
category:      Parsing
copyright:
  (c) 2011-2016 Bryan O'Sullivan
  (c) 2011 MailRank, Inc.

author:        Bryan O'Sullivan <bos@serpentine.com>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
stability:     experimental
homepage:      https://github.com/haskell/aeson
bug-reports:   https://github.com/haskell/aeson/issues
build-type:    Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.5
   || ==9.6.2

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:
    Data.Aeson.Parser
    Data.Aeson.Parser.Internal

  other-modules:
    Data.Aeson.Internal.ByteString
    Data.Aeson.Internal.Text
    Data.Aeson.Internal.Word8

  build-depends:
      aeson               >=2.2.0.0  && <2.3
    , attoparsec          >=0.14.2   && <0.15
    , base                >=4.10.0.0 && <5
    , bytestring          >=0.10.8.2 && <0.12
    , integer-conversion  >=0.1      && <0.2
    , primitive           >=0.8.0.0  && <0.9
    , scientific          >=0.3.7.0  && <0.4
    , text                >=1.2.3.0  && <1.3  || >=2.0 && <2.1
    , vector              >=0.12.0.1 && <0.14

source-repository head
  type:     git
  location: git://github.com/haskell/aeson.git
  subdir:   attoparsec-aeson
