name:            attoparsec-iso8601
version:         1.1.0.0
synopsis:        Parsing of ISO 8601 dates, originally from aeson
description:     Parsing of ISO 8601 dates, originally from aeson.
license:         BSD3
license-file:    LICENSE
category:        Parsing
copyright:       (c) 2011-2016 Bryan O'Sullivan
                 (c) 2011 MailRank, Inc.
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Adam Bergmark <adam@bergmark.nl>
stability:       experimental
cabal-version:   >=1.10
homepage:        https://github.com/haskell/aeson
bug-reports:     https://github.com/haskell/aeson/issues
build-type:      Simple
tested-with:     GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC ==9.2.3, GHC==9.4.1
extra-source-files:
  README.md
  changelog.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:
    Data.Attoparsec.Time.Internal
    Data.Attoparsec.Time
  build-depends:
    attoparsec >= 0.14.2 && < 0.15,
    base >= 4.9 && < 5,
    base-compat-batteries >= 0.10.0 && < 0.13,
    time-compat >= 1.9.4 && < 1.10,
    text >= 1.2.3.0 && < 1.3.0.0 || >= 2.0 && <2.1,
    time >= 1.6.0.1 && < 1.13

source-repository head
  type:     git
  location: git://github.com/haskell/aeson.git
  subdir:   attoparsec-iso8601
