cabal-version: >=1.10
name:          aeson-benchmarks
version:       0
build-type:    Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.7
   || ==9.6.3
   || ==9.8.1

flag tasty-bench
  description: Use tasty-bench, otherwise criterion
  default:     True
  manual:      True

flag text2
  manual:  False
  default: False

library
  default-language: Haskell2010
  build-depends:    base

executable aeson-bench
  default-language: Haskell2010
  main-is:          aeson-benchmark-suite.hs
  hs-source-dirs:   bench examples/src
  ghc-options:      -Wall -rtsopts

  -- use tasty-bench or criterion
  if flag(tasty-bench)
    build-depends: tasty-bench

  else
    build-depends: criterion

  -- text version split
  if flag(text2)
    build-depends: text >=2

  else
    build-depends: text <2

  build-depends:
      aeson
    , attoparsec
    , attoparsec-aeson
    , base
    , base-compat-batteries
    , base16-bytestring
    , blaze-builder
    , bytestring
    , containers
    , deepseq
    , filepath
    , hashable
    , json
    , scientific
    , tagged
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector

  other-modules:
    AesonFoldable
    AesonMap
    Auto.G.BigProduct
    Auto.G.BigRecord
    Auto.G.BigSum
    Auto.G.D
    Auto.T.BigProduct
    Auto.T.BigRecord
    Auto.T.BigSum
    Auto.T.D
    AutoCompare
    Bench
    Compare
    Compare.JsonBench
    CompareWithJSON
    Dates
    GitHub
    Issue673
    Micro
    Options
    Twitter
    Twitter.Generic
    Twitter.Manual
    Twitter.Options
    Twitter.TH
    Typed
    Typed.Generic
    Typed.Manual
    Typed.TH
    UnescapePureText2
    Utils

  if impl(ghc <8.4)
    other-modules: Compare.JsonBuilder
    build-depends: json-builder

  if impl(ghc >=8.10 && <9.6)
    build-depends: hermes-json >=0.2.0.1 && <0.3
    other-modules:
      CompareWithHermes
      Data.Hermes.Aeson
      Twitter.Hermes

  if !flag(text2)
    -- buffer-builder might work with text-2 sometime
    build-depends: buffer-builder
    other-modules: Compare.BufferBuilder

    -- this module won't
    other-modules: UnescapePureText1
