cabal-version: >=1.10
name:          criterion-compare-txt
version:       0.1.0.0
synopsis:      A simple tool for comparing in Criterion benchmark results
description:
  Output a table containing a comparison of results for the input files
  Based on https://github.com/bgamari/criterion-compare

license:       BSD3
license-file:  LICENSE
author:
  Oleg Grenrus <oleg.grenrus@iki.fi>, Ben Gamari <ben@well-typed.com>

maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2020 Oleg Grenrus, 2016-2020 Ben Gamari
category:      Development
build-type:    Simple
tested-with:   GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1

executable criterion-compare-txt
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          CriterionCompare.hs
  ghc-options:      -Wall
  other-modules:
    CsvParse
    Types

  other-extensions:
    NoImplicitPrelude
    FlexibleContexts
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  build-depends:
      base                  >=4.7      && <4.15
    , base-compat-batteries >=0.11.1   && <0.12
    , bytestring            >=0.10.4.0 && <0.11
    , cassava               >=0.5      && <0.6
    , containers            >=0.5.5.1  && <0.7
    , filepath              >=1.3      && <1.5
    , optparse-applicative  >=0.12     && <0.16
    , vector                >=0.11     && <0.13
