name:                aeson-examples
version:             0
build-type:          Simple
cabal-version:       >=1.8

executable aeson-example-generic
  main-is: Generic.hs
  ghc-options: -Wall
  build-depends:
    aeson >= 0.10,
    base,
    base-compat,
    bytestring,
    ghc-prim

executable aeson-example-simplest
  main-is: Simplest.hs
  ghc-options: -Wall
  build-depends:
    aeson,
    base,
    base-compat,
    bytestring

executable aeson-example-th
  main-is: TemplateHaskell.hs
  ghc-options: -Wall
  build-depends:
    aeson,
    base,
    base-compat,
    bytestring
